2002-08-28 Pascal Georges <pascal.georges1@free.fr>
	* src/boards/advanced_colors.c : finished the board. A board suitable for adults.

2002-08-28 Pascal Georges <pascal.georges1@free.fr>
	* src/boards/advanced_colors.c added a new board (not finished yet)

2002-08-27  Xavier Garreau <xgarreau@club-internet.fr>

	* src/boards/memory.c: fixed a potential random bug at level 5 or above

2002-08-23  Bruno Coudoin  <bruno.coudoin@free.fr>

	* boards/mastermind.xml.in: new board by bruno
	* po/fr.po: updated
	* src/boards/mastermind.c: new board by bruno

2002-08-18  Bruno Coudoin  <bruno.coudoin@free.fr>

	* boards/Makefile.am: added mastermind
	* boards/fun.xml.in: added mastermind
	* po/POTFILES.in: added mastermind files
	* po/hu.po: updated by Marcel Hilzinger
	* src/boards/Makefile.am: added mastermind
	* src/gcompris/config.c: added malaysian

2002-08-02 Gregory Leblanc <gleblanc@linuxweasel.com>

	* gcompris/boards/algebra_guesscount/-.png
	* gcompris/boards/gcompris/letters/-.png: removed, by request of
	bruno-coudoin@free.fr.

2002-07-29 Hasbullah Bin Pit <sebol@ikhlas.com>

        * configure.in: Added "ms" to ALL_LINGUAS.

2002-07-16 Pascal Georges <pascal.georges1@free.fr>
	* src/boards/leftright.c added hands


2002-07-08 Bruno Coudoin <bruno.coudoin@free.fr>
	* src/boards/draw.c: added the raise button


2002-07-01 Bruno Coudoin <bruno.coudoin@free.fr>
	* ChangeLog: Released 1.1.0

2002-06-30 Bruno Coudoin <bruno.coudoin@free.fr>
	* src/gcompris/gcompris.c: added setenv for LANGs vars to force gcompris in the
	user given locale.
	Now you can dynamically change the locale with gcompris's config menu without
	having to quit ;) this is a long standing enhancement request.
	* src/gcompris/bar.c: thanks to Nabil Ben Khalifa, the home is not displayed at
	upper level.
	* src/gcompris/config.c: added a bad icon when the locale is not available.
	The user must install the locale on its computer if they are not available.