@@ -1,3 +1,6 @@
+2002-09-02 Pascal Georges <pascal.georges1@free.fr>
+	* src/boards/advanced_colors.c : Added an error count.
+
 2002-08-28 Pascal Georges <pascal.georges1@free.fr>
 	* src/boards/advanced_colors.c : finished the board. A board suitable for adults.
 
